# potato-chess-browser

./: Attacked.ts  Board.js  Board.ts  Constants.ts  Drawing.js  Drawing.ts  LICENSE  MiscUtils.js  MoveGen.ts  Moves.js  Moves.ts  PerftScripts.js  PerftWorker.js  PieceMoves.ts  Pieces.js  Pieces.ts  README.md  SearchWorker.js  TODO.md  attacked.cpp  attacked.h  bishop.cpp  bishop.h  board.cpp  board.h  board.js  book.cpp  book.h  bookFEN.txt  checks.cpp  checks.h  constants.cpp  constants.h  drawing.js  engine  engine.js  engine.wasm  eval  eval.cpp  eval.h  (+41 more)
Assets/: book.txt  bookFEN.txt
css/: style.css
js/: board.js  drawing.js  engine.js  engine.wasm  miscUtils.js  move.js  perftScripts.js  perftWorker.js  searchWorker.js
src/: bitboard.cpp  bitboard.h  eval.cpp  eval.h  hash.cpp  hash.h  main.cpp  maps.cpp  maps.h  move.cpp  move.h  moveGen.cpp  moveGen.h  perft.cpp  perft.h  search.cpp  search.h  wasm.cpp
src/bitboard/: CMakeLists.txt  bitboard.cpp  bitboard.h  eval.cpp  eval.h  hash.cpp  hash.h  main.cpp  move.cpp  move.h  moveGen.cpp  moveGen.h  perft.cpp  perft.h  search.cpp  search.h
src/js/: board.cpp  board.h  checks.cpp  checks.h  constants.h  move.cpp  move.h  moveGen.cpp  moveGen.h
